--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-oauthlib==2.0.1    
-requests==2.20.0    
-requests-oauthlib==0.7.0    
-six==1.13.0
+oauthlib==3.*    
+requests==2.*    
+requests-oauthlib==1.*   
+six==1.*
